# python-ripgrep

./: Cargo.toml  README.md  benchmark.py  pyproject.toml  test.py  test_ripgrep.py
.github/workflows/: ci.yml  release.yml
python_ripgrep/: __init__.py  __init__.pyi
ripgrep_rs/: __init__.py  __init__.pyi
src/: lib.rs  ripgrep_core.rs
tests/: test_absolute_paths.py
